Working Dashboard and Products Page

--- a/Selu383.SP25.P03.Web/src/routes/App.css
+++ b/Selu383.SP25.P03.Web/src/routes/App.css
@@ -16,5 +16,7 @@ body {
 }
 
 nav {
-  background-color: #fecc01 !important; /* Ensure the background color is not overridden */
+  background-color: #fecc01 /*!important; /* Ensure the background color is not overridden */
 }
+
+
