--- a/Selu383.SP25.P03.Web/src/routes/App.css
+++ b/Selu383.SP25.P03.Web/src/routes/App.css
@@ -2,13 +2,12 @@
 
 html,
 body {
-  height: 100%;
+  max-height: 100%;
   margin: 0;
 }
 
 #root {
-  height: 100%;
-  width: 100%;
+  max-width: 100vw;
 }
 
 .topbar {
