--- a/Selu383.SP25.P03.Web/src/BackendClient/Components/BackendCSS/Backend.css
+++ b/Selu383.SP25.P03.Web/src/BackendClient/Components/BackendCSS/Backend.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+/*@import "tailwindcss";*/
 
 /*! tailwindcss v2.0.4 | MIT License | https://tailwindcss.com */
 
@@ -13,29 +13,29 @@ Document
 Use a better box model (opinionated).
 */
 
-*,
+/**,
 ::before,
 ::after {
     box-sizing: border-box;
-}
+}*/
 
 /**
 Use a more readable tab size (opinionated).
 */
 
-html {
+/*html {
     tab-size: 4;
-}
+}*/
 
 /**
 1. Correct the line height in all browsers.
 2. Prevent adjustments of font size after orientation changes in iOS.
 */
 
-html {
-    line-height: 1.15; /* 1 */
-    -webkit-text-size-adjust: 100%; /* 2 */
-}
+/*html {
+    line-height: 1.15;*/ /* 1 */
+    /*-webkit-text-size-adjust: 100%;*/ /* 2 */
+/*}*/
 
 /*
 Sections
@@ -46,18 +46,18 @@ Sections
 Remove the margin in all browsers.
 */
 
-body {
+/*body {
     margin: 0;
-}
+}*/
 
 /**
 Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3)
 */
 
-body {
-    font-family: system-ui, -apple-system, /* Firefox supports this but not yet `system-ui` */
-    'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
-}
+/*body {
+    font-family: system-ui, -apple-system,*/ /* Firefox supports this but not yet `system-ui` */
+    /*'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+}*/
 
 /*
 Grouping content
@@ -69,10 +69,10 @@ Grouping content
 2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
 */
 
-hr {
-    height: 0; /* 1 */
-    color: inherit; /* 2 */
-}
+/*hr {
+    height: 0;*/ /* 1 */
+    /*color: inherit;*/ /* 2 */
+/*}*/
 
 /*
 Text-level semantics
@@ -83,46 +83,46 @@ Text-level semantics
 Add the correct text decoration in Chrome, Edge, and Safari.
 */
 
-abbr[title] {
+/*abbr[title] {
     -webkit-text-decoration: underline dotted;
     text-decoration: underline dotted;
-}
+}*/
 
 /**
 Add the correct font weight in Edge and Safari.
 */
 
-b,
+/*b,
 strong {
     font-weight: bolder;
-}
+}*/
 
 /**
 1. Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3)
 2. Correct the odd 'em' font sizing in all browsers.
 */
 
-code,
+/*code,
 kbd,
 samp,
 pre {
-    font-family: ui-monospace, SFMono-Regular, Consolas, 'Liberation Mono', Menlo, monospace; /* 1 */
-    font-size: 1em; /* 2 */
-}
+    font-family: ui-monospace, SFMono-Regular, Consolas, 'Liberation Mono', Menlo, monospace;*/ /* 1 */
+    /*font-size: 1em;*/ /* 2 */
+/*}*/
 
 /**
 Add the correct font size in all browsers.
 */
 
-small {
+/*small {
     font-size: 80%;
-}
+}*/
 
 /**
 Prevent 'sub' and 'sup' elements from affecting the line height in all browsers.
 */
 
-sub,
+/*sub,
 sup {
     font-size: 75%;
     line-height: 0;
@@ -136,7 +136,7 @@ sub {
 
 sup {
     top: -0.5em;
-}
+}*/
 
 /*
 Tabular data
@@ -148,10 +148,10 @@ Tabular data
 2. Correct table border color inheritance in all Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
 */
 
-table {
-    text-indent: 0; /* 1 */
-    border-color: inherit; /* 2 */
-}
+/*table {
+    text-indent: 0;*/ /* 1 */
+    /*border-color: inherit;*/ /* 2 */
+/*}*/
 
 /*
 Forms
@@ -163,35 +163,35 @@ Forms
 2. Remove the margin in Firefox and Safari.
 */
 
-button,
+/*button,
 input,
 optgroup,
 select,
 textarea {
-    font-family: inherit; /* 1 */
-    font-size: 100%; /* 1 */
-    line-height: 1.15; /* 1 */
-    margin: 0; /* 2 */
-}
+    font-family: inherit;*/ /* 1 */
+    /*font-size: 100%;*/ /* 1 */
+    /*line-height: 1.15;*/ /* 1 */
+    /*margin: 0;*/ /* 2 */
+/*}*/
 
 /**
 Remove the inheritance of text transform in Edge and Firefox.
 1. Remove the inheritance of text transform in Firefox.
 */
 
-button,
-select { /* 1 */
-    text-transform: none;
-}
+/*button,
+select {*/ /* 1 */
+    /*text-transform: none;
+}*/
 
 /**
 Correct the inability to style clickable types in iOS and Safari.
 */
 
-button,
+/*button,
 [type='button'] {
     -webkit-appearance: button;
-}
+}*/
 
 /**
 Remove the inner border and padding in Firefox.
@@ -210,17 +210,17 @@ See: https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d4
 Remove the padding so developers are not caught out when they zero out 'fieldset' elements in all browsers.
 */
 
-legend {
+/*legend {
     padding: 0;
-}
+}*/
 
 /**
 Add the correct vertical alignment in Chrome and Firefox.
 */
 
-progress {
+/*progress {
     vertical-align: baseline;
-}
+}*/
 
 /**
 Correct the cursor style of increment and decrement buttons in Safari.
@@ -231,10 +231,10 @@ Correct the cursor style of increment and decrement buttons in Safari.
 2. Correct the outline style in Safari.
 */
 
-[type='search'] {
-    -webkit-appearance: textfield; /* 1 */
-    outline-offset: -2px; /* 2 */
-}
+/*[type='search'] {
+    -webkit-appearance: textfield;*/ /* 1 */
+    /*outline-offset: -2px;*/ /* 2 */
+/*}*/
 
 /**
 Remove the inner padding in Chrome and Safari on macOS.
@@ -254,9 +254,9 @@ Interactive
 Add the correct display in Chrome and Safari.
 */
 
-summary {
+/*summary {
     display: list-item;
-}
+}*/
 
 /**
  * Manually forked from SUIT CSS Base: https://github.com/suitcss/base
@@ -268,7 +268,7 @@ summary {
  * Removes the default spacing and border for appropriate elements.
  */
 
-blockquote,
+/*blockquote,
 dl,
 dd,
 h1,
@@ -287,14 +287,14 @@ pre {
 button {
     background-color: transparent;
     background-image: none;
-}
+}*/
 
     /**
  * Work around a Firefox/IE bug where the transparent `button` background
  * results in a loss of the default `button` focus styles.
  */
 
-    button:focus {
+    /*button:focus {
         outline: 1px dotted;
         outline: 5px auto -webkit-focus-ring-color;
     }
@@ -309,7 +309,7 @@ ul {
     list-style: none;
     margin: 0;
     padding: 0;
-}
+}*/
 
 /**
  * Tailwind custom reset styles
@@ -322,20 +322,20 @@ ul {
  *    to override it to ensure consistency even when using the default theme.
  */
 
-html {
-    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 1 */
-    line-height: 1.5; /* 2 */
-}
+/*html {
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";*/ /* 1 */
+    /*line-height: 1.5;*/ /* 2 */
+/*}*/
 
 /**
  * Inherit font-family and line-height from `html` so users can set them as
  * a class directly on the `html` element.
  */
 
-body {
+/*body {
     font-family: inherit;
     line-height: inherit;
-}
+}*/
 
 /**
  * 1. Prevent padding and border from affecting element width.
@@ -363,22 +363,22 @@ body {
  *    https://github.com/tailwindcss/tailwindcss/pull/116
  */
 
-*,
+/**,
 ::before,
 ::after {
-    box-sizing: border-box; /* 1 */
-    border-width: 0; /* 2 */
-    border-style: solid; /* 2 */
-    border-color: #e4e4e7; /* 2 */
-}
+    box-sizing: border-box;*/ /* 1 */
+    /*border-width: 0;*/ /* 2 */
+    /*border-style: solid;*/ /* 2 */
+    /*border-color: #e4e4e7;*/ /* 2 */
+/*}*/
 
 /*
  * Ensure horizontal rules are visible by default
  */
 
-hr {
+/*hr {
     border-top-width: 1px;
-}
+}*/
 
 /**
  * Undo the `border-style: none` reset that Normalize applies to images so that
@@ -390,7 +390,7 @@ hr {
  * https://github.com/tailwindcss/tailwindcss/issues/362
  */
 
-img {
+/*img {
     border-style: solid;
 }
 
@@ -421,17 +421,17 @@ h5,
 h6 {
     font-size: inherit;
     font-weight: inherit;
-}
+}*/
 
 /**
  * Reset links to optimize for opt-in styling instead of
  * opt-out.
  */
 
-a {
+/*a {
     color: inherit;
     text-decoration: inherit;
-}
+}*/
 
 /**
  * Reset form element properties that are easy to forget to
@@ -441,7 +441,7 @@ a {
  * normalize.css.
  */
 
-button,
+/*button,
 input,
 optgroup,
 select,
@@ -449,7 +449,7 @@ textarea {
     padding: 0;
     line-height: inherit;
     color: inherit;
-}
+}*/
 
 /**
  * Use the configured 'mono' font family for elements that
@@ -458,12 +458,12 @@ textarea {
  * 'mono' font family.
  */
 
-pre,
+/*pre,
 code,
 kbd,
 samp {
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-}
+}*/
 
 /**
  * Make replaced elements `display: block` by default as that's
@@ -473,7 +473,7 @@ samp {
  * https://github.com/mozdevs/cssremedy/issues/14
  */
 
-img,
+/*img,
 svg,
 video,
 canvas,
@@ -483,7 +483,7 @@ embed,
 object {
     display: block;
     vertical-align: middle;
-}
+}*/
 
 /**
  * Constrain images and videos to the parent width and preserve
@@ -492,7 +492,7 @@ object {
  * https://github.com/mozdevs/cssremedy/issues/14
  */
 
-img,
+/*img,
 video {
     max-width: 100%;
     height: auto;
@@ -528,7 +528,7 @@ select {
     [type='text']:focus, [type='email']:focus, [type='url']:focus, [type='password']:focus, [type='number']:focus, [type='month']:focus, [type='search']:focus, [type='time']:focus, [type='week']:focus, [multiple]:focus, textarea:focus, select:focus {
         outline: 2px solid transparent;
         outline-offset: 2px;
-        --tw-ring-inset: var(--tw-empty, /*!*/ /*!*/ );
+        --tw-ring-inset: var(--tw-empty,*/ /*!*/ /*!*/ /*);
         --tw-ring-offset-width: 0px;
         --tw-ring-offset-color: #fff;
         --tw-ring-color: #2563eb;
@@ -592,7 +592,7 @@ select {
     [type='checkbox']:focus {
         outline: 2px solid transparent;
         outline-offset: 2px;
-        --tw-ring-inset: var(--tw-empty, /*!*/ /*!*/ );
+        --tw-ring-inset: var(--tw-empty,*/ /*!*/ /*!*/ /*);
         --tw-ring-offset-width: 2px;
         --tw-ring-offset-color: #fff;
         --tw-ring-color: #2563eb;
@@ -2259,7 +2259,7 @@ select {
 }
 
 * {
-    --tw-ring-inset: var(--tw-empty, /*!*/ /*!*/ );
+    --tw-ring-inset: var(--tw-empty,*/ /*!*/ /*!*/ /*);
     --tw-ring-offset-width: 0px;
     --tw-ring-offset-color: #fff;
     --tw-ring-color: rgba(59, 130, 246, 0.5);
@@ -2645,9 +2645,9 @@ select {
         margin-top: 16rem;
     }
 
-    .md\:ml-64 {
+    .md\:ml-64 {*/
 /*        margin-left: auto;*/
-        margin-left: 16rem;
+        /*margin-left: 16rem;
     }
 
     .md\:min-h-full {
@@ -2933,7 +2933,7 @@ select {
 }
 
 @media (min-width: 1536px) {
-}
+}*/
 
 /*@theme {
 };*/
